--- a/.github/workflows/sync_trigger.yml
+++ b/.github/workflows/sync_trigger.yml
@@ -1,31 +1,37 @@
 name: 15天自动同步并构建
 
 permissions:
-  actions: write 
+  actions: write # 必须开启此权限，用于“指挥”其他脚本运行
 
 on:
   schedule:
+    # 每月 1 号和 16 号 00:00 (UTC) 自动执行，约每 15 天一次
     - cron: "0 0 1,16 * *"
-  workflow_dispatch: 
+  workflow_dispatch: # 保留手动按钮，方便你随时测试
 
 jobs:
   automation:
     runs-on: ubuntu-latest
+    # 仅在你的 fork 仓库运行，不干扰上游
     if: ${{ github.event.repository.fork }}
+    
     steps:
-      - name: 1. 触发同步任务
+      - name: 1. 触发同步任务 (sync.yml)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # 请确保下面这个文件名和你左侧列表里的同步脚本文件名完全一致
-          # 如果你的同步脚本叫 main.yml，请把 sync.yml 改成 main.yml
-          gh workflow run sync.yml 
+          echo "正在启动同步脚本 sync.yml..."
+          # 使用 GitHub CLI 触发名为 sync.yml 的工作流
+          gh workflow run sync.yml
           
       - name: 2. 等待同步完成
+        # 同步通常很快，这里设置等待 60 秒，确保代码更新已写入分支
         run: sleep 60s 
 
       - name: 3. 触发构建任务 (oc.yml)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          echo "同步已预留足够时间，现在启动 OpenClash 构建脚本 oc.yml..."
+          # 使用 GitHub CLI 触发名为 oc.yml 的工作流
           gh workflow run oc.yml
